// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usePasteHighChartsTheme hook should return a deepmerged options object when options are passed 1`] = `
{
  "accessibility": {
    "description": "This chart shows the solar employment growth by sector from 2010 to 2016.",
  },
  "chart": {
    "backgroundColor": "rgb(255, 255, 255)",
  },
  "colors": [
    "rgb(0, 20, 137)",
    "rgb(14, 124, 58)",
    "rgb(13, 58, 31)",
    "rgb(0, 140, 255)",
    "rgb(57, 71, 98)",
    "rgb(166, 127, 227)",
    "rgb(109, 46, 209)",
    "rgb(136, 145, 170)",
    "rgb(117, 12, 12)",
    "rgb(235, 86, 86)",
  ],
  "credits": {
    "style": {
      "color": "rgb(142, 150, 174)",
    },
  },
  "labels": {
    "style": {
      "color": "rgb(18, 28, 45)",
    },
  },
  "legend": {
    "itemHoverStyle": {
      "color": "rgb(96, 107, 133)",
    },
    "itemStyle": {
      "color": "rgb(18, 28, 45)",
      "font": "0.625rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
    },
    "title": {
      "style": {
        "color": "rgb(18, 28, 45)",
      },
    },
  },
  "plotOptions": {
    "series": {
      "borderColor": "transparent",
    },
  },
  "series": [
    {
      "data": [
        43934,
        52503,
        57177,
        69658,
        97031,
        119931,
        137133,
        154175,
      ],
      "name": "Installation",
    },
    {
      "data": [
        24916,
        24064,
        29742,
        29851,
        32490,
        30282,
        38121,
        40434,
      ],
      "name": "Manufacturing",
    },
    {
      "data": [
        11744,
        17722,
        16005,
        19771,
        20185,
        24377,
        32147,
        39387,
      ],
      "name": "Sales &amp; Distribution",
    },
    {
      "data": [
        null,
        null,
        7988,
        12169,
        15112,
        22452,
        34400,
        34227,
      ],
      "name": "Project Development",
    },
    {
      "data": [
        12908,
        5948,
        8105,
        11248,
        8989,
        11816,
        18274,
        18111,
      ],
      "name": "Other",
    },
  ],
  "subtitle": {
    "style": {
      "color": "rgb(96, 107, 133)",
      "font": "0.75rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
    },
    "text": "Source: thesolarfoundation.com",
  },
  "title": {
    "style": {
      "color": "rgb(18, 28, 45)",
      "font": "700 1rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
    },
    "text": "Solar Employment Growth by Sector, 2010-2016",
  },
  "tooltip": {
    "backgroundColor": "rgb(244, 244, 246)",
    "style": {
      "color": "rgb(18, 28, 45)",
    },
  },
  "xAxis": {
    "labels": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "500 0.625rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
    "lineColor": "rgb(18, 28, 45)",
    "tickColor": "rgb(18, 28, 45)",
    "title": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "600 0.875rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
  },
  "yAxis": {
    "labels": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "500 0.625rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
    "title": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "600 0.875rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
  },
}
`;

exports[`usePasteHighChartsTheme hook should return the theme options object when an empty object is passed 1`] = `
{
  "chart": {
    "backgroundColor": "rgb(255, 255, 255)",
  },
  "colors": [
    "rgb(0, 20, 137)",
    "rgb(14, 124, 58)",
    "rgb(13, 58, 31)",
    "rgb(0, 140, 255)",
    "rgb(57, 71, 98)",
    "rgb(166, 127, 227)",
    "rgb(109, 46, 209)",
    "rgb(136, 145, 170)",
    "rgb(117, 12, 12)",
    "rgb(235, 86, 86)",
  ],
  "credits": {
    "style": {
      "color": "rgb(142, 150, 174)",
    },
  },
  "labels": {
    "style": {
      "color": "rgb(18, 28, 45)",
    },
  },
  "legend": {
    "itemHoverStyle": {
      "color": "rgb(96, 107, 133)",
    },
    "itemStyle": {
      "color": "rgb(18, 28, 45)",
      "font": "0.625rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
    },
    "title": {
      "style": {
        "color": "rgb(18, 28, 45)",
      },
    },
  },
  "plotOptions": {
    "series": {
      "borderColor": "transparent",
    },
  },
  "subtitle": {
    "style": {
      "color": "rgb(96, 107, 133)",
      "font": "0.75rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
    },
  },
  "title": {
    "style": {
      "color": "rgb(18, 28, 45)",
      "font": "700 1rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
    },
  },
  "tooltip": {
    "backgroundColor": "rgb(244, 244, 246)",
    "style": {
      "color": "rgb(18, 28, 45)",
    },
  },
  "xAxis": {
    "labels": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "500 0.625rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
    "lineColor": "rgb(18, 28, 45)",
    "tickColor": "rgb(18, 28, 45)",
    "title": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "600 0.875rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
  },
  "yAxis": {
    "labels": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "500 0.625rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
    "title": {
      "style": {
        "color": "rgb(18, 28, 45)",
        "font": "600 0.875rem 'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif",
      },
    },
  },
}
`;
